--- a/buest/.gitignore
+++ b/buest/.gitignore
@@ -1,24 +1,37 @@
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Temporary files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+*.log
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# IDE related
+.vscode/
+.idea/
+
+# Cache
+.cache/
+.eslintcache
+turbo
+
+# Mac / Windows junk
+*.swp
+*.swo
